# Tenvy

./: Agents.md  Cargo.toml  LICENSE  README.md
docs/: app-vnc-workflow.md  modules-plugins-review.md  plugin-manifest.md  plugins-and-modules-architecture.md  remote-desktop-optimizations.md  remote-desktop-validation.md
resources/: plugin-signers.json
scripts/: build-plugins.ts
shared/: package.json
shared/constants/: protocol.ts
shared/modules/: index.ts
shared/pluginmanifest/: definitions.json  go.mod  manifest.go  manifest_test.go  remote-desktop-engine.json  requirements.go  requirements_test.go  verify.go  verify_test.go
shared/pluginmanifest-rs/: Cargo.toml
shared/pluginmanifest-rs/src/: lib.rs
shared/types/: agent.ts  app-vnc.ts  audio.ts  auth.ts  build.ts  client-chat.ts  client-tools.ts  clipboard.ts  config.ts  downloads.ts  environment.ts  file-manager.ts  ip-geolocation.ts  keylogger.ts  messages.ts  notes.ts  options.ts  plugin-manifest.test.ts  plugin-manifest.ts  recovery.ts  registry-events.ts  registry.ts  remote-desktop.ts  startup-manager.ts  system-info.ts  task-manager.ts  tcp-connections.ts  tool-activation.ts  trigger-monitor.ts  webcam.ts
shared/utils/: command.ts
tenvy-client/: go.mod  go.sum
tenvy-client/cmd/: audio_control.go  audio_control_stub.go  bootstrap_config.go  config.go  main.go  notes.go  privileges_unix.go  privileges_windows.go  process_unix.go  process_windows.go  (+9 more)
tenvy-server/: .gitignore  Agents.md  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
tests/: redeem.test.ts
(+643 files in other folders)
